--- a/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.css
+++ b/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.css
@@ -6,3 +6,30 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.wrapper{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.video-container video{
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    width: 100vw;
+    height: 53vw;
+    min-width: 150vw;
+    min-height: 100vh;
+    transform: translate(-48%, 0%);
+}
