--- a/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.html
+++ b/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.html
@@ -2,7 +2,15 @@
 
     <div class="row">
 
-        <div class="col-md-6" id="img-bg"></div>
+        <div class="col-md-6">
+            <div class="wrapper">
+                <div class="video-container">
+                    <video autoplay muted loop>
+                        <source src="../../assets/video/Notebook - 117.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
 
         <div class="col-md-6 mt-5 mb-5">
             <div class="row d-flex justify-content-center">
@@ -46,7 +54,7 @@
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-danger mr-4">Cancelar</button>
+                        <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
                         <button type="submit" class="btn btn-success">Cadastrar</button>
                     </div>
 
