--- a/blogPessoalFrontEnd/src/app/entrar/entrar.component.css
+++ b/blogPessoalFrontEnd/src/app/entrar/entrar.component.css
@@ -6,3 +6,29 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+ 
+
+
+.video-background{
+ min-width: 100%;
+ min-height: 100%;
+ width: auto;
+ height: auto; 
+ 
+
+}
+
+.wrapper {
+    overflow: hidden;
+   
+}
+
+.bgLogin {
+    background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
+    border-radius: 8px;
+}
+
+.bgEntrar {
+    background-color: rgba(229, 231, 235);
+}
+
