--- a/blogPessoalFrontEnd/src/app/entrar/entrar.component.html
+++ b/blogPessoalFrontEnd/src/app/entrar/entrar.component.html
@@ -1,42 +1,48 @@
 <div class="container-fluid">
 
-    <div class="row d-flex align-items-center">
+    <div class="row h-100 d-flex align-items-center bgEntrar">
 
-        <div class="col-md-6">
+        <div class="col-md-6 d-flex justify-content-center ">
 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
+            <div class="row d-flex justify-content-center w-100">
+                <div class="col-md-6 bgLogin shadow p-3 mb-5 rounded">
 
-                    <h1 class="text-center mb-3">ENTRAR</h1>
+                    <h1 class="text-center mb-3 text-light">ENTRAR</h1>
 
-                    <div class="form-group">
+                    <div class="form-group text-light">
                         <label for="usuario">Usuário</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario" 
-                        placeholder="Seu usuário">
+                        <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group text-light">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" 
-                        placeholder="Sua senha">
+                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-sucess">Entrar</button>
+                        <button type="submit" class="btn btn-outline-light">Entrar</button>
                     </div>
 
-                    <hr class="mt-5 mb-5"> 
+                    <hr class="mt-5 mb-5">
 
-                    <p class="text-center">
-                        Nao tem uma conta? <a href="">Cadastre-se</a>
+                    <p class="text-center text-light">
+                        Nao tem uma conta? <a routerLink='/cadastrar' class="text-info">Cadastre-se</a>
                     </p>
-
+               
                 </div>
             </div>
 
         </div>
-
-        <div class="col-md-6" id="img-bg"></div>
+        
+            <div class="col-md-6 p-0">
+                <div class="wrapper">
+                    <div class="video-container">
+                        <video class="video-background" autoplay muted loop width="auto">
+                            <source src="../../assets/video/Global - 48092.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
 
     </div>
 
