feat(consumo): Criando models

--- a/blogPessoalFrontEnd/src/app/entrar/entrar.component.html
+++ b/blogPessoalFrontEnd/src/app/entrar/entrar.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid vh-100">
 
     <div class="row h-100 d-flex align-items-center bgEntrar">
 
@@ -34,7 +34,7 @@
 
         </div>
         
-            <div class="col-md-6 p-0">
+            <div class="col-md-6 p-0 m-0">
                 <div class="wrapper">
                     <div class="video-container">
                         <video class="video-background" autoplay muted loop width="auto">
