--- a/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.html
+++ b/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.html
@@ -20,33 +20,33 @@
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input class="form-control" type="nome" name="nome" id="nome" placeholder="Nome completo">
+                        <input [(ngModel)]='user.nome' class="form-control" type="nome" name="nome" id="nome" placeholder="Nome completo" >
                     </div>
 
                     <div class="form-group">
-                        <label for="nome">Nome</label>
-                        <input class="form-control" type="nome" name="nome" id="nome" placeholder="Nome completo">
+                        <label for="usuario">Usuário</label>
+                        <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
                     </div>
 
                     <div class="form-group">
                         <label for="foto">Link da foto</label>
-                        <input class="form-control" type="foto" name="foto" id="foto" placeholder="Link da sua foto">
+                        <input [(ngModel)]='user.foto' class="form-control" type="foto" name="foto" id="foto" placeholder="Link da sua foto">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+                        <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmSenha">Confirmar senha</label>
-                        <input class="form-control" type="password" name="confirmSenha" id="confirmSenha"
+                        <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha"
                             placeholder="Confirme sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="tipoUsuario">Tipo de Usuário</label>
-                        <select class="form-control" name="tipoUsuario" id="tipoUsuario">
+                        <select class="form-control" name="tipoUsuario" id="tipoUsuario" (change)='tipoUser($event)'>
                             <option>Selecione um tipo de usuário</option>
                             <option value="normal">Normal</option>
                             <option value="adm">Administrador</option>
@@ -55,7 +55,7 @@
 
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-                        <button type="submit" class="btn btn-success">Cadastrar</button>
+                        <button type="submit" class="btn btn-success" (click)='cadastrar()'>Cadastrar</button>
                     </div>
 
 
