--- a/blogPessoalFrontEnd/src/app/inicio/inicio.component.html
+++ b/blogPessoalFrontEnd/src/app/inicio/inicio.component.html
@@ -8,7 +8,7 @@
                 <h1 class="fs-54">Seja bem vindo(a)</h1>
                 <h5 class="fs-18">Expresse aqui seus pensamentos e opniões!</h5>
                </div>
-           </div> 
+           </div>
 
            <div class="row d-flex justify-content-center mt-3 mb-5">
                <div class="col-md-6">
@@ -34,7 +34,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
+          <a  (click)='findByIdUser()' class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
         </li>
 
         <li class="nav-item">
@@ -42,18 +42,59 @@
         </li>
       </ul>
 
-      <div class="tab-content" id="myTabContent">
+      <div class="tab-content mt-5" id="myTabContent">
 
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
-            Todas as postagens
+
+        <div class="card-columns">
+          <div class="card text-center" *ngFor='let item of listaPostagens'>
+            <div class="card-body">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <small class="text-muted">Tema: {{item.tema.descricao}}</small>
+              <p class="card-text mt-3">{{item.texto}}</p>
+              <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+              <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+              
+            </div>
+          </div>
+        </div>
+
+
         </div>
 
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="profile-tab">
-            Minhas postagens
+
+        <div class="card-columns">
+          <div class="card text-center" *ngFor='let item of listaUserPostagem'>
+            <div class="card-body">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <small class="text-muted">Tema: {{item.tema.descricao}}</small>
+              <p class="card-text mt-3">{{item.texto}}</p>
+              <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+              <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+
+              <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+              <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
+
+            </div>
+          </div>
+        </div>
+
         </div>
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-            Postagens por tema
+
+          <div class="card-columns" *ngFor='let tema of listaTemas'>
+            <div class="card text-center" *ngFor='let item of tema.postagem'>
+              <div class="card-body">
+                <h5 class="card-title m-0">{{item.titulo}}</h5>
+                <p class="card-text mt-3">{{item.texto}}</p>
+                <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
 </div>
@@ -75,29 +116,29 @@
           </button>
         </div>
         <div class="modal-body">
-         
+
             <div class="from-group">
                 <label for="titulo">Título</label>
-                <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+                <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o título">
             </div>
 
             <div class="from-group">
                 <label for="texto">Texto</label>
-                <textarea class="form-control" name="texto" id="titulo" rows="3"></textarea>
+                <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="titulo" rows="3"></textarea>
             </div>
 
-            
+
             <div class="from-group">
                 <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
-                <select name="tema" id="tema" class="form-control">
-                <option value="">Temas</option>
+                <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
                 </select>
             </div>
 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-success">Publicar</button>
+          <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">Publicar</button>
         </div>
       </div>
     </div>
