--- a/blogPessoalFrontEnd/src/app/inicio/inicio.component.html
+++ b/blogPessoalFrontEnd/src/app/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-    <div class="row bg-secondary d-flex align-items-center">
+    <div class="row bg-blog d-flex align-items-center">
         <div class="col-md-6">
 
            <div class="row d-flex justify-content-center">
@@ -20,7 +20,7 @@
         </div>
 
         <div class="col-md-6  d-flex justify-content-center">
-            <img src="https://i.imgur.com/2kJ4XSp.png" alt="Ilustração rede social" width="500px" height="500px">
+            <img src="https://i.imgur.com/eeNfMgv.png" alt="Ilustração rede social" width="500px" height="500px">
         </div>
     </div>
 
@@ -54,7 +54,7 @@
               <p class="card-text mt-3">{{item.texto}}</p>
               <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
               <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
-              
+
             </div>
           </div>
         </div>
@@ -71,9 +71,9 @@
               <small class="text-muted">Tema: {{item.tema.descricao}}</small>
               <p class="card-text mt-3">{{item.texto}}</p>
               <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
-              <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
 
-              <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+
+              <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3 mt-3" href="">Editar</a>
               <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
 
             </div>
