--- a/blogPessoalFrontEnd/src/app/menu/menu.component.html
+++ b/blogPessoalFrontEnd/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light bg-blog">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
@@ -13,13 +13,13 @@
         </li>
 
         <li class="nav-item pl-3">
-            <a href="">
+            <a [routerLink]="['/user-edit', id]">
                 <p class=" text-white fs-16 m-0">
                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                 </p>
             </a>
         </li>
- 
+
     </ul>
 
     <ul class="navbar-nav ml-auto d-flex align-items-center">
