--- a/blogPessoalFrontEnd/src/app/rodape/rodape.component.html
+++ b/blogPessoalFrontEnd/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small bg-blog pt-4">
 
     <div class="container">
 
