fix(inicio/entrar): Arrumando imagens das páginas

--- a/blogPessoalFrontEnd/src/app/entrar/entrar.component.html
+++ b/blogPessoalFrontEnd/src/app/entrar/entrar.component.html
@@ -35,13 +35,7 @@
         </div>
         
             <div class="col-md-6 p-0 m-0">
-                <div class="wrapper">
-                    <div class="video-container">
-                        <video class="video-background" autoplay muted loop width="auto">
-                            <source src="../../assets/video/Global - 48092.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
+                <img src="https://imgur.com/CJmzBxh" alt="">
             </div>
 
     </div>
