--- a/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.html
+++ b/blogPessoalFrontEnd/src/app/cadastrar/cadastrar.component.html
@@ -3,13 +3,7 @@
     <div class="row">
 
         <div class="col-md-6">
-            <div class="wrapper">
-                <div class="video-container">
-                    <video autoplay muted loop>
-                        <source src="../../assets/video/Notebook - 117.mp4" type="video/mp4">
-                    </video>
-                </div>
-            </div>
+            <img src="https://i.imgur.com/1KDr73V.jpg" alt="">
         </div>
 
         <div class="col-md-6 mt-5 mb-5">
